# fastapi_09112023

./: .env-example  Dockerfile  README.md  activate_this.py  dao.py  database.py  docker-compose.production.yml  docker-compose.yml  main.py  models.py  pyproject.toml  settings.py
api/: api_router_auth.py  api_router_user.py  general_routers.py  schemas_user.py
migrations/: env.py
migrations/versions/: 2023_12_18_1936-d544c1eeb82c_initial.py  2023_12_18_1949-2d8bb3d81f97_add_age.py  2023_12_18_1954-87826b6def37_add_money.py  2023_12_21_1834-e77d0de49023_add_order_table.py  2024_01_04_1915-ccd338ccce33_create_user.py  2024_01_11_2014-a4b1e71979c9_refresh_token.py  2024_01_29_1836-d2d1503e390c_add_admin_user.py  2024_01_29_1922-ccb89c4190b1_add_product_table.py
templates/: add-product.html  base.html  cart.html  index.html  login.html  registration.html
web/: web_router.py
